[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-dir = "src"

[project]
name = "nfempy"
version = "0.1.0"
description = "Neat finite elements in python"
keywords = ["Finite Elements", "Nonlinear mappings", "science"]
readme = "README.md"
authors = [
    {name = "Omar Duran Developer", email = "omar.duran@uib.no"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.9, <4"

[project.urls]
Homepage = "https://github.com/OmarDuran/nfempy/tree/main"
"Bug Reports" = "https://github.com/OmarDuran/nfempy/issues"
Source = "https://github.com/OmarDuran/nfempy/tree/main"

[project.optional-dependencies]
dev = [
    "check-manifest",
]

[tool.pytest.ini_options]
pythonpath = "src"

test = [
    "pytest",
]


[project.scripts]
nfempy = "nfempy:main"
